Added admin login. Changed admin menu layout. Changed webpage contact info

--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -379,6 +379,7 @@
     <Content Include="Views\Student\Default.cshtml" />
     <Content Include="Views\Portal\Logout.cshtml" />
     <Content Include="Views\Student\Community.cshtml" />
+    <Content Include="Views\Portal\AdminLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
