--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -239,6 +239,7 @@
     <Content Include="Content\img\avatar9.png" />
     <Content Include="Content\img\AvatarLevel.png" />
     <Content Include="Content\img\ChartPlaceholder.png" />
+    <Content Include="Content\img\daytime.png" />
     <Content Include="Content\img\defaultavatarX.png" />
     <Content Include="Content\img\defaultCalendarIcon.png" />
     <Content Include="Content\img\defaultCalendarX.PNG" />
@@ -260,6 +261,7 @@
     <Content Include="Content\img\individualGraph.png" />
     <Content Include="Content\img\KioskLoginPanel.png" />
     <Content Include="Content\img\KioskReg.png" />
+    <Content Include="Content\img\nightime.png" />
     <Content Include="Content\img\PortalAvatars.png" />
     <Content Include="Content\img\PortalCustomize.png" />
     <Content Include="Content\img\PortalHouse.png" />
@@ -272,10 +274,14 @@
     <Content Include="Content\img\ReportStudentMay.png" />
     <Content Include="Content\img\sitelogo.png" />
     <Content Include="Content\img\Store.png" />
+    <Content Include="Content\img\storeMockup.jpg" />
     <Content Include="Content\img\studentGameLogin.PNG" />
     <Content Include="Content\img\StudentProfile.png" />
     <Content Include="Content\img\StudentProfileBio.png" />
     <Content Include="Content\img\StudentReport.PNG" />
+    <Content Include="Content\img\student_community.PNG" />
+    <Content Include="Content\img\student_logout.PNG" />
+    <Content Include="Content\img\sunset.png" />
     <Content Include="Content\img\totalGraph.png" />
     <Content Include="Content\img\wireframe_accomplishments.png" />
     <Content Include="Content\img\wireframe_avatar.png" />
