--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -267,7 +267,7 @@
     <Content Include="Content\img\avatar9.png" />
     <Content Include="Content\img\AvatarLevel.png" />
     <Content Include="Content\img\ChartPlaceholder.png" />
-    <Content Include="Content\img\daytime.png" />
+    <Content Include="Content\img\daytimeBackground.png" />
     <Content Include="Content\img\defaultavatarX.png" />
     <Content Include="Content\img\defaultCalendarIcon.png" />
     <Content Include="Content\img\defaultCalendarX.PNG" />
@@ -304,12 +304,12 @@
     <Content Include="Content\img\Store.png" />
     <Content Include="Content\img\storeMockup.jpg" />
     <Content Include="Content\img\storeMockup.png" />
+    <Content Include="Content\img\StudentCommunity.PNG" />
     <Content Include="Content\img\studentGameLogin.PNG" />
     <Content Include="Content\img\StudentProfile.png" />
     <Content Include="Content\img\StudentProfileBio.png" />
     <Content Include="Content\img\StudentReport.PNG" />
     <Content Include="Content\img\studentReportWireframe.png" />
-    <Content Include="Content\img\student_community.PNG" />
     <Content Include="Content\img\student_logout.PNG" />
     <Content Include="Content\img\sunset.png" />
     <Content Include="Content\img\totalGraph.png" />
