Edited Student/Admin intro pages

--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -415,6 +415,8 @@
     <Content Include="Views\Student\Avatar_Fab5.cshtml" />
     <Content Include="Views\Student\Market.cshtml" />
     <Content Include="Views\Student\Report.cshtml" />
+    <Content Include="Views\Home\AdminIntro.cshtml" />
+    <Content Include="Views\Home\StudentIntro.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
