Multiple invidiual reports

--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -229,32 +229,34 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\img\Admin Reports\backIcon.png" />
+    <Content Include="Content\img\Admin Reports\editAttendance1.PNG" />
+    <Content Include="Content\img\Admin Reports\editAttendance2.PNG" />
+    <Content Include="Content\img\Admin Reports\editAttendance3.PNG" />
+    <Content Include="Content\img\Admin Reports\nextIcon.png" />
+    <Content Include="Content\img\Admin Reports\student1_1Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student1_2Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student1_3Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student1_4Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student2_1Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student2_2Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student2_3Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student2_4Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student3_1Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student3_2Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student3_3Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student3_4Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student4_1Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student4_2Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student4_3Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student4_4Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student5_1Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student5_2PAttendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student5_3Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student5_4Attendance.PNG" />
+    <Content Include="Content\img\Admin Reports\totalAttendance.PNG" />
     <Content Include="Content\img\adminBackground.png" />
     <Content Include="Content\img\adminBackground1.png" />
-    <Content Include="Content\img\Admin\editAttendance1.PNG" />
-    <Content Include="Content\img\Admin\editAttendance2.PNG" />
-    <Content Include="Content\img\Admin\editAttendance3.PNG" />
-    <Content Include="Content\img\Admin\student1_1Attendance.PNG" />
-    <Content Include="Content\img\Admin\student1_2Attendance.PNG" />
-    <Content Include="Content\img\Admin\student1_3Attendance.PNG" />
-    <Content Include="Content\img\Admin\student1_4Attendance.PNG" />
-    <Content Include="Content\img\Admin\student2_1Attendance.PNG" />
-    <Content Include="Content\img\Admin\student2_2Attendance.PNG" />
-    <Content Include="Content\img\Admin\student2_3Attendance.PNG" />
-    <Content Include="Content\img\Admin\student2_4Attendance.PNG" />
-    <Content Include="Content\img\Admin\student3_1Attendance.PNG" />
-    <Content Include="Content\img\Admin\student3_2Attendance.PNG" />
-    <Content Include="Content\img\Admin\student3_3Attendance.PNG" />
-    <Content Include="Content\img\Admin\student3_4Attendance.PNG" />
-    <Content Include="Content\img\Admin\student4_1Attendance.PNG" />
-    <Content Include="Content\img\Admin\student4_2Attendance.PNG" />
-    <Content Include="Content\img\Admin\student4_3Attendance.PNG" />
-    <Content Include="Content\img\Admin\student4_4Attendance.PNG" />
-    <Content Include="Content\img\Admin\student5_1Attendance.PNG" />
-    <Content Include="Content\img\Admin\student5_2PAttendance.PNG" />
-    <Content Include="Content\img\Admin\student5_3Attendance.PNG" />
-    <Content Include="Content\img\Admin\student5_4Attendance.PNG" />
-    <Content Include="Content\img\Admin\totalAttendance.PNG" />
     <Content Include="Content\img\avatar0.png" />
     <Content Include="Content\img\avatar1.png" />
     <Content Include="Content\img\avatar2.png" />
