--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -230,6 +230,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\img\Admin Reports\backIcon.png" />
+    <Content Include="Content\img\Admin Reports\blankReport.png" />
     <Content Include="Content\img\Admin Reports\editAttendance1.PNG" />
     <Content Include="Content\img\Admin Reports\editAttendance2.PNG" />
     <Content Include="Content\img\Admin Reports\editAttendance3.PNG" />
@@ -269,7 +270,7 @@
     <Content Include="Content\img\avatar9.png" />
     <Content Include="Content\img\AvatarLevel.png" />
     <Content Include="Content\img\ChartPlaceholder.png" />
-    <Content Include="Content\img\daytimeBackground.png" />
+    <Content Include="Content\img\daytime.png" />
     <Content Include="Content\img\defaultavatarX.png" />
     <Content Include="Content\img\defaultCalendarIcon.png" />
     <Content Include="Content\img\defaultCalendarX.PNG" />
@@ -291,7 +292,6 @@
     <Content Include="Content\img\individualGraph.png" />
     <Content Include="Content\img\KioskLoginPanel.png" />
     <Content Include="Content\img\KioskReg.png" />
-    <Content Include="Content\img\nightimeBackground.png" />
     <Content Include="Content\img\nightime.png" />
     <Content Include="Content\img\PortalAvatars.png" />
     <Content Include="Content\img\PortalCustomize.png" />
@@ -307,12 +307,12 @@
     <Content Include="Content\img\Store.png" />
     <Content Include="Content\img\storeMockup.jpg" />
     <Content Include="Content\img\storeMockup.png" />
-    <Content Include="Content\img\StudentCommunity.PNG" />
     <Content Include="Content\img\studentGameLogin.PNG" />
     <Content Include="Content\img\StudentProfile.png" />
     <Content Include="Content\img\StudentProfileBio.png" />
     <Content Include="Content\img\StudentReport.PNG" />
     <Content Include="Content\img\studentReportWireframe.png" />
+    <Content Include="Content\img\student_community.PNG" />
     <Content Include="Content\img\student_logout.PNG" />
     <Content Include="Content\img\sunset.png" />
     <Content Include="Content\img\totalGraph.png" />
@@ -415,10 +415,9 @@
     <Content Include="Views\Portal\AdminLogin.cshtml" />
     <Content Include="Views\Student\Accomplishments.cshtml" />
     <Content Include="Views\Student\Avatar.cshtml" />
+    <Content Include="Views\Student\Avatar_Fab5.cshtml" />
     <Content Include="Views\Student\Market.cshtml" />
     <Content Include="Views\Student\Report.cshtml" />
-    <Content Include="Views\Home\AdminIntro.cshtml" />
-    <Content Include="Views\Home\StudentIntro.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
