--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -231,6 +231,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\img\Admin Reports\backIcon.png" />
     <Content Include="Content\img\Admin Reports\blankReport.png" />
+    <Content Include="Content\img\Admin Reports\calendar.png" />
+    <Content Include="Content\img\Admin Reports\calendar1.png" />
     <Content Include="Content\img\Admin Reports\editAttendance1.PNG" />
     <Content Include="Content\img\Admin Reports\editAttendance2.PNG" />
     <Content Include="Content\img\Admin Reports\editAttendance3.PNG" />
