Add buttons to market to buy and sell

--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -458,6 +458,7 @@
     <Content Include="Views\Home\KioskIntro.cshtml" />
     <Content Include="Views\Home\AdminIntro.cshtml" />
     <Content Include="Views\Kiosk\Landing.cshtml" />
+    <Content Include="Views\Student\MarketAfter.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
