--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -50,6 +50,9 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Rotativa, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rotativa.1.7.3\lib\net461\Rotativa.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -254,7 +257,7 @@
     <Content Include="Content\img\Admin Reports\student4_3Attendance.PNG" />
     <Content Include="Content\img\Admin Reports\student4_4Attendance.PNG" />
     <Content Include="Content\img\Admin Reports\student5_1Attendance.PNG" />
-    <Content Include="Content\img\Admin Reports\student5_2PAttendance.PNG" />
+    <Content Include="Content\img\Admin Reports\student5_2Attendance.PNG" />
     <Content Include="Content\img\Admin Reports\student5_3Attendance.PNG" />
     <Content Include="Content\img\Admin Reports\student5_4Attendance.PNG" />
     <Content Include="Content\img\Admin Reports\totalAttendance.PNG" />
@@ -329,11 +332,16 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Rotativa\help-wkhtmltoimage.txt" />
+    <Content Include="Rotativa\help-wkhtmltopdf.txt" />
+    <Content Include="Rotativa\wkhtmltoimage.exe" />
+    <Content Include="Rotativa\wkhtmltopdf.exe" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="App_Browsers\qt.browser" />
     <None Include="Properties\PublishProfiles\5051 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\Fab5-Staging - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\Fab5-SUperNova - Web Deploy.pubxml" />
