--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -361,6 +361,7 @@
     <Content Include="Content\img\Student Market\Sunglasses.png" />
     <Content Include="Content\img\Student Market\vanilla%28G%29.png" />
     <Content Include="Content\img\Student Market\vanilla%28T%29.png" />
+    <Content Include="Content\img\studentCalendar.PNG" />
     <Content Include="Content\img\StudentCommunity.PNG" />
     <Content Include="Content\img\studentGameLogin.PNG" />
     <Content Include="Content\img\StudentProfile.png" />
