--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -275,6 +275,7 @@
     <Content Include="Content\img\avatar8.png" />
     <Content Include="Content\img\avatar9.png" />
     <Content Include="Content\img\AvatarLevel.png" />
+    <Content Include="Content\img\AvatarMockUp_final.png" />
     <Content Include="Content\img\Avatar\avatar1.png" />
     <Content Include="Content\img\Avatar\avatar10.png" />
     <Content Include="Content\img\Avatar\avatar2.png" />
