--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -374,6 +374,7 @@
     <Content Include="Content\img\sus-salon-icon.png" />
     <Content Include="Content\img\totalGraph.png" />
     <Content Include="Content\img\townB.png" />
+    <Content Include="Content\img\wasabi.png" />
     <Content Include="Content\img\wireframe_accomplishments.png" />
     <Content Include="Content\img\wireframe_avatar.png" />
     <Content Include="Content\img\wireframe_market.png" />
