--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -330,6 +330,7 @@
     <Content Include="Content\img\ReportPic.png" />
     <Content Include="Content\img\ReportStudentMay.png" />
     <Content Include="Content\img\sitelogo.png" />
+    <Content Include="Content\img\speech-bubble-blue.png" />
     <Content Include="Content\img\Store.png" />
     <Content Include="Content\img\storeMockup.jpg" />
     <Content Include="Content\img\storeMockup.png" />
