--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -315,6 +315,7 @@
     <Content Include="Content\img\KioskLoginPanel.png" />
     <Content Include="Content\img\KioskReg.png" />
     <Content Include="Content\img\man-cave-icon.png" />
+    <Content Include="Content\img\mayStudent.png" />
     <Content Include="Content\img\meow-cafe-icon.png" />
     <Content Include="Content\img\month_year.png" />
     <Content Include="Content\img\nhus-moo-shoppe-icon.png" />
@@ -347,10 +348,13 @@
     <Content Include="Content\img\Student Market\Market_demo5.png" />
     <Content Include="Content\img\Student Market\Market_demo6.png" />
     <Content Include="Content\img\Student Market\market_mockup2.png" />
+    <Content Include="Content\img\studentApril.PNG" />
     <Content Include="Content\img\studentCalendar.PNG" />
     <Content Include="Content\img\studentCalendar1.PNG" />
     <Content Include="Content\img\StudentCommunity.PNG" />
     <Content Include="Content\img\studentGameLogin.PNG" />
+    <Content Include="Content\img\studentMarch.png" />
+    <Content Include="Content\img\studentMay.png" />
     <Content Include="Content\img\StudentProfile.png" />
     <Content Include="Content\img\student_logout.PNG" />
     <Content Include="Content\img\sunset.png" />
