Added year pic in year tab and shop pic in shop tab

--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -317,6 +317,7 @@
     <Content Include="Content\img\man-cave-icon.png" />
     <Content Include="Content\img\meow-cafe-icon.png" />
     <Content Include="Content\img\month_year.png" />
+    <Content Include="Content\img\MyShops.png" />
     <Content Include="Content\img\nhus-moo-shoppe-icon.png" />
     <Content Include="Content\img\nightime.png" />
     <Content Include="Content\img\nightimeBackground.png" />
