Update report page

--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -366,6 +366,7 @@
     <Content Include="Content\img\wireframe_avatar.png" />
     <Content Include="Content\img\wireframe_market.png" />
     <Content Include="Content\img\wireframe_student_index.png" />
+    <Content Include="Content\img\YearChartCopy.png" />
     <Content Include="Content\img\YearChart.png" />
     <Content Include="Content\Login.css" />
     <Content Include="Content\Student.css" />
