--- a/5051/5051.csproj
+++ b/5051/5051.csproj
@@ -369,6 +369,7 @@
     <Content Include="Content\img\YearChartCopy.png" />
     <Content Include="Content\img\YearChart.png" />
     <Content Include="Content\Login.css" />
+    <Content Include="Content\PrintReport.css" />
     <Content Include="Content\Student.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -457,7 +458,7 @@
     <Content Include="Views\Admin\Manage.cshtml" />
     <Content Include="Views\Admin\Calendar.cshtml" />
     <Content Include="Views\Admin\Attendance.cshtml" />
-    <Content Include="Views\Admin\StudentReport.cshtml" />
+    <Content Include="Views\Admin\PrintReport.cshtml" />
     <Content Include="Views\Home\AvatarExample.cshtml" />
     <Content Include="Views\Home\Error.cshtml" />
     <Content Include="Views\Kiosk\NewProfile.cshtml" />
